Visual Fixes and Improvements
Fixed titlebar button hover state,
Fixed lists not alignin properly
Updated Library Design

--- a/src/styles/_Library.scss
+++ b/src/styles/_Library.scss
@@ -1,16 +1,28 @@
 .bookshelf {
   margin: 0 auto;
-  width: 95%;
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
-
+.bookshelf > div {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
 .bookshelf-item {
   display: inline-block;
   width: 150px;
-  height: 225px;
-  margin: 2px;
+  height: 275px;
+  margin: 8px;
+  padding: 4px;
+  border-radius: 4px;
+  background: white;
+  border: 1px solid #ddd;
+}
+.bookshelf-item:hover {
+  box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.2);
+  /*background: rgba(255, 255, 255, 0.7);*/
 }
 .bookshelf-item img {
   z-index: 1;
@@ -19,6 +31,45 @@
   transition: all .5s;
   top: 0;
   left: 0;
+}
+.bookshelf-item .bookshelf-title {
+  width: calc(100% - 4px);
+  padding: 4px 2px;
+  padding-bottom: 0;
+  font-size: 16px;
+  font-weight: 300;
+  display: inline-block;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  color: #333;
+}
+
+.bookshelf-item .service-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.service-list .service-label {
+  background: #7695C6;
+  margin: 0 2px;
+  padding: 2px 4px;
+  font-size: 10px;
+  color: white;
+  border-radius: 2px;
+  font-family: montserrat;
+}
+.service-label.hummingbird {
+  background: #F06439;
+}
+.service-label.myanimelist {
+  background: #3A64AC;
+}
+.service-label.anilist {
+  background: #2A72AB;
+}
+.service-label.chiika {
+  background: #CB3972
 }
 .bookshelf-book {
   position: fixed;
